lstm product created

--- a/AI/utils/lstm.ipynb
+++ b/AI/utils/lstm.ipynb
@@ -24,6 +24,173 @@
     "df.to_csv(\"filterNewAkakce.csv\",index=False)\n",
     "print(f\"Original rows: {len(df)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d137c570",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "İlk 10 satır:\n",
+      "  phone_brand              phone_model  price  storage  ram launch_date  \\\n",
+      "0       apple      Apple iPhone 16 Pro  77999      256    8   9/20/2024   \n",
+      "1       apple          Apple iPhone 15  55049      256    6   9/22/2023   \n",
+      "2       apple          Apple iPhone 15  64999      512    6   9/22/2023   \n",
+      "3       apple  Apple iPhone 15 Pro Max  94999      512    8   9/22/2023   \n",
+      "4       apple  Apple iPhone 15 Pro Max  94999     1000    8   9/22/2023   \n",
+      "5       apple     Apple iPhone 15 Plus  63749      256    6   9/22/2023   \n",
+      "6       apple     Apple iPhone 15 Plus  70499      512    6   9/22/2023   \n",
+      "7       apple      Apple iPhone 15 Pro  82999      256    8   9/22/2023   \n",
+      "8       apple      Apple iPhone 15 Pro  94545      512    8   9/22/2023   \n",
+      "9       apple      Apple iPhone 15 Pro  73999     1000    8   9/22/2023   \n",
+      "\n",
+      "                                      dimensions  weight  \\\n",
+      "0  149.6 x 71.5 x 8.3 mm (5.89 x 2.81 x 0.33 in)   199.0   \n",
+      "1  147.6 x 71.6 x 7.8 mm (5.81 x 2.82 x 0.31 in)   171.0   \n",
+      "2  147.6 x 71.6 x 7.8 mm (5.81 x 2.82 x 0.31 in)   171.0   \n",
+      "3  159.9 x 76.7 x 8.3 mm (6.30 x 3.02 x 0.33 in)   221.0   \n",
+      "4  159.9 x 76.7 x 8.3 mm (6.30 x 3.02 x 0.33 in)   221.0   \n",
+      "5  160.9 x 77.8 x 7.8 mm (6.33 x 3.06 x 0.31 in)   201.0   \n",
+      "6  160.9 x 77.8 x 7.8 mm (6.33 x 3.06 x 0.31 in)   201.0   \n",
+      "7  146.6 x 70.6 x 8.3 mm (5.77 x 2.78 x 0.33 in)   187.0   \n",
+      "8  146.6 x 70.6 x 8.3 mm (5.77 x 2.78 x 0.33 in)   187.0   \n",
+      "9  146.6 x 70.6 x 8.3 mm (5.77 x 2.78 x 0.33 in)   187.0   \n",
+      "\n",
+      "                                        display_type  display_size  ...  \\\n",
+      "0  LTPO Super Retina XDR OLED, 120Hz, HDR10, Dolb...           6.3  ...   \n",
+      "1  Super Retina XDR OLED, HDR10, Dolby Vision, 10...           6.1  ...   \n",
+      "2  Super Retina XDR OLED, HDR10, Dolby Vision, 10...           6.1  ...   \n",
+      "3  LTPO Super Retina XDR OLED, 120Hz, HDR10, Dolb...           6.7  ...   \n",
+      "4  LTPO Super Retina XDR OLED, 120Hz, HDR10, Dolb...           6.7  ...   \n",
+      "5  Super Retina XDR OLED, HDR10, Dolby Vision, 10...           6.7  ...   \n",
+      "6  Super Retina XDR OLED, HDR10, Dolby Vision, 10...           6.7  ...   \n",
+      "7  LTPO Super Retina XDR OLED, 120Hz, HDR10, Dolb...           6.1  ...   \n",
+      "8  LTPO Super Retina XDR OLED, 120Hz, HDR10, Dolb...           6.1  ...   \n",
+      "9  LTPO Super Retina XDR OLED, 120Hz, HDR10, Dolb...           6.1  ...   \n",
+      "\n",
+      "    price_range os_type  os_version battery_size  colors_available  \\\n",
+      "0  medium price     iOS        18.0       Medium                 4   \n",
+      "1  medium price     iOS        17.0        Small                 5   \n",
+      "2  medium price     iOS        17.0        Small                 5   \n",
+      "3    high price     iOS        17.0       Medium                 4   \n",
+      "4    high price     iOS        17.0       Medium                 4   \n",
+      "5  medium price     iOS        17.0       Medium                 5   \n",
+      "6  medium price     iOS        17.0       Medium                 5   \n",
+      "7  medium price     iOS        17.0        Small                 4   \n",
+      "8    high price     iOS        17.0        Small                 4   \n",
+      "9    high price     iOS        17.0        Small                 4   \n",
+      "\n",
+      "  chip_company   cpu_core gpu_company fingerprint video_resolution  \n",
+      "0        Apple  Hexa-core       Apple        Face                3  \n",
+      "1        Apple  Hexa-core       Apple        Face                3  \n",
+      "2        Apple  Hexa-core       Apple        Face                3  \n",
+      "3        Apple  Hexa-core       Apple        Face                3  \n",
+      "4        Apple  Hexa-core       Apple        Face                3  \n",
+      "5        Apple  Hexa-core       Apple        Face                3  \n",
+      "6        Apple  Hexa-core       Apple        Face                3  \n",
+      "7        Apple  Hexa-core       Apple        Face                3  \n",
+      "8        Apple  Hexa-core       Apple        Face                3  \n",
+      "9        Apple  Hexa-core       Apple        Face                3  \n",
+      "\n",
+      "[10 rows x 33 columns]\n",
+      "\n",
+      "==================================================\n",
+      "\n",
+      "\n",
+      "Sonuç CSV dosyası kaydedildi: C:\\Users\\pc\\Desktop\\AIbazaar\\AIBazaar\\AI\\utils\\products_descriptions.csv\n",
+      "\n",
+      "Oluşturulan CSV yapısı:\n",
+      "   Product Name                productID  \\\n",
+      "0             1      Apple iPhone 16 Pro   \n",
+      "1             2          Apple iPhone 15   \n",
+      "2             3          Apple iPhone 15   \n",
+      "3             4  Apple iPhone 15 Pro Max   \n",
+      "4             5  Apple iPhone 15 Pro Max   \n",
+      "\n",
+      "                                         description  \n",
+      "0  storage:256;ram:8;phone_brand:apple;phone_mode...  \n",
+      "1  storage:256;ram:6;phone_brand:apple;phone_mode...  \n",
+      "2  storage:512;ram:6;phone_brand:apple;phone_mode...  \n",
+      "3  storage:512;ram:8;phone_brand:apple;phone_mode...  \n",
+      "4  storage:1000;ram:8;phone_brand:apple;phone_mod...  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# CSV dosyasını oku\n",
+    "df = pd.read_csv(r\"C:\\Users\\pc\\Desktop\\AIbazaar\\AIBazaar\\AI\\utils\\filterPhone.csv\")\n",
+    "print(\"İlk 10 satır:\")\n",
+    "print(df.head(10))\n",
+    "print(\"\\n\" + \"=\" * 50 + \"\\n\")\n",
+    "\n",
+    "# Birleştirilecek kolonlar\n",
+    "columns_to_concat = [\n",
+    "    \"storage\",\n",
+    "    \"ram\",\n",
+    "    \"phone_brand\",\n",
+    "    \"phone_model\",  # Fixed missing comma here\n",
+    "    \"dimensions\",\n",
+    "    \"display_size\",\n",
+    "    \"display_resolution\",\n",
+    "    \"os\",\n",
+    "    \"battery\",\n",
+    "    \"video\",\n",
+    "    \"chipset\",\n",
+    "    \"cpu\",\n",
+    "    \"gpu\",\n",
+    "    \"ppi_density\",\n",
+    "]\n",
+    "\n",
+    "# Yeni DataFrame oluştur\n",
+    "result_df = pd.DataFrame(columns=[\"productID\", \"Product Name\", \"description\"])\n",
+    "\n",
+    "# Her satır için işlem yap\n",
+    "for index, row in df.iterrows():\n",
+    "    # Boş olmayan değerleri key:value formatında birleştir\n",
+    "    description_parts = []\n",
+    "\n",
+    "    for col in columns_to_concat:\n",
+    "        if col in df.columns:  # Kolon varsa\n",
+    "            value = row[col]\n",
+    "            # NaN, None veya boş değilse ekle\n",
+    "            if pd.notna(value) and str(value).strip() != \"\":\n",
+    "                description_parts.append(f\"{col}:{value}\")\n",
+    "\n",
+    "    # Tüm parçaları birleştir\n",
+    "    description = \";\".join(description_parts)\n",
+    "\n",
+    "    # Phone model değerini al\n",
+    "    phone_model = (\n",
+    "        row[\"phone_model\"]\n",
+    "        if \"phone_model\" in df.columns and pd.notna(row[\"phone_model\"])\n",
+    "        else \"\"\n",
+    "    )\n",
+    "\n",
+    "    # Yeni DataFrame'e ekle\n",
+    "    result_df.loc[index] = [\n",
+    "        index + 1,\n",
+    "        phone_model,\n",
+    "        description,\n",
+    "    ]  # Corrected column order\n",
+    "\n",
+    "    # İlk 5 sonucu göster (test için)\n",
+    "\n",
+    "# CSV olarak kaydet\n",
+    "output_path = (\n",
+    "    r\"C:\\Users\\pc\\Desktop\\AIbazaar\\AIBazaar\\AI\\utils\\products_descriptions.csv\"\n",
+    ")\n",
+    "result_df.to_csv(output_path, index=False, encoding=\"utf-8\")\n",
+    "\n",
+    "print(f\"\\nSonuç CSV dosyası kaydedildi: {output_path}\")\n",
+    "print(\"\\nOluşturulan CSV yapısı:\")\n",
+    "print(result_df.head())"
+   ]
   }
  ],
  "metadata": {
@@ -42,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
