--- a/AI/utils/lstm.ipynb
+++ b/AI/utils/lstm.ipynb
@@ -134,7 +134,7 @@
     "    \"storage\",\n",
     "    \"ram\",\n",
     "    \"phone_brand\",\n",
-    "    \"phone_model\",  # Fixed missing comma here\n",
+    "    \"phone_model\",  \n",
     "    \"dimensions\",\n",
     "    \"display_size\",\n",
     "    \"display_resolution\",\n",
