--- a/AI/utils/notebooks/lstm.ipynb
+++ b/AI/utils/notebooks/lstm.ipynb
@@ -194,44 +194,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "500cd896",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
-    "from collections import defaultdict\n",
+    "import pandas as pd\n",
     "\n",
     "input_filename = r'C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\filterNewAkakce.csv'\n",
-    "output_filename = 'products_unique_images.csv'\n",
     "\n",
-    "# Dictionary to track seen products {product_name: first_occurrence_row}\n",
-    "product_dict = {}\n",
+    "df = pd.read_csv(input_filename)\n",
     "\n",
-    "with open(input_filename, mode='r', encoding='utf-8') as infile:\n",
-    "    reader = csv.DictReader(infile)\n",
-    "    \n",
-    "    # New fieldnames (exclude 'Date')\n",
-    "    output_fields = [field for field in reader.fieldnames if field != 'Date']\n",
-    "    \n",
-    "    with open(output_filename, mode='w', encoding='utf-8', newline='') as outfile:\n",
-    "        writer = csv.DictWriter(outfile, fieldnames=output_fields)\n",
-    "        writer.writeheader()\n",
-    "        \n",
-    "        for row in reader:\n",
-    "            product_name = row['Product Name'].strip()\n",
-    "            \n",
-    "            if product_name not in product_dict:\n",
-    "                # Create a new row without the Date field\n",
-    "                new_row = {\n",
-    "                    'Product Name': row['Product Name'],\n",
-    "                    'Price': row['Price'],\n",
-    "                    'Image': row['Image']\n",
-    "                }\n",
-    "                product_dict[product_name] = True\n",
-    "                writer.writerow(new_row)\n",
+    "df['Product Name'] = df['Product Name'].str.strip()\n",
     "\n",
-    "print(f\"Saved {len(product_dict)} products with unique images to {output_filename}\")"
+    "df.to_csv(input_filename, index=False)\n"
    ]
   }
  ],
@@ -251,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
