--- a/AI/utils/notebooks/xgboost.ipynb
+++ b/AI/utils/notebooks/xgboost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "b6941536",
    "metadata": {},
    "outputs": [
@@ -10,12 +10,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0    77999\n",
-      "1    55049\n",
-      "2    64999\n",
-      "3    94999\n",
-      "4    94999\n",
-      "Name: price_usd, dtype: int64\n",
       "Original rows: 370\n"
      ]
     }
@@ -23,19 +17,16 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "dfproduct3 = pd.read_csv(r\"C:\\Users\\pc\\Desktop\\AIbazaar\\AIBazaar\\AI\\utils\\products3.csv\")\n",
-    "df = pd.read_csv(\n",
-    "    r\"C:\\Users\\pc\\Desktop\\AIbazaar\\AIBazaar\\AI\\utils\\csv\\phones_after_2023yeni.csv\"\n",
+    "dfproduct3 = pd.read_csv(\n",
+    "    r\"C:\\Users\\pc\\Desktop\\AIbazaar\\AIBazaar\\AI\\utils\\newProduct.csv\"\n",
     ")\n",
-    "# Convert Price column to numeric, invalid parsing will be NaN\n",
-    "dfproduct3[\"Price\"] = pd.to_numeric(dfproduct3[\"Price\"], errors=\"coerce\")\n",
+    "df = pd.read_csv(\n",
+    "    r\"C:\\Users\\pc\\Desktop\\AIbazaar\\AIBazaar\\AI\\utils\\products_descriptions.csv\"\n",
+    ")\n",
     "\n",
-    "# Keep only rows with Price > 0\n",
+    "df[\"ProductName\"] = dfproduct3[\"Product Name\"]\n",
     "\n",
-    "df[\"price_usd\"] = dfproduct3[\"Price\"]\n",
-    "print(df[\"price_usd\"].head(5))\n",
-    "df = df[df[\"price_usd\"] > 0]\n",
-    "df.to_csv(\"filterPhone.csv\",index=False)\n",
+    "df.to_csv(\"filterPhone2.csv\", index=False)\n",
     "print(f\"Original rows: {len(df)}\")"
    ]
   }
@@ -56,7 +47,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
