--- a/AI/utils/notebooks/lstm.ipynb
+++ b/AI/utils/notebooks/lstm.ipynb
@@ -194,18 +194,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "500cd896",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "input_filename = r'C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\filterNewAkakce.csv'\n",
+    "input_filename = r'C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\notebooks\\filterPhone2.csv'\n",
     "\n",
     "df = pd.read_csv(input_filename)\n",
     "\n",
-    "df['Product Name'] = df['Product Name'].str.strip()\n",
+    "df['ProductName'] = df['ProductName'].str.strip()\n",
     "\n",
     "df.to_csv(input_filename, index=False)\n"
    ]
