Update lstm model and client

--- a/AI/utils/notebooks/lstm.ipynb
+++ b/AI/utils/notebooks/lstm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1aabd429",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original rows: 20604\n"
+      "Original rows: 32391\n"
      ]
     }
    ],
@@ -194,20 +194,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "500cd896",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "input_filename = r'C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\notebooks\\filterPhone2.csv'\n",
+    "input_filename = r'C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\filterNewAkakce.csv'\n",
     "\n",
     "df = pd.read_csv(input_filename)\n",
     "\n",
-    "df['ProductName'] = df['ProductName'].str.strip()\n",
+    "df['Product Name'] = df['Product Name'].str.strip()\n",
     "\n",
     "df.to_csv(input_filename, index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f8623fdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fiyatı hariç tekrarsız veri kaydedildi: C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\withoutDuplicatePrice.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# CSV dosyasını oku\n",
+    "input_filename = r'C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\filterNewAkakce.csv'\n",
+    "df = pd.read_csv(input_filename)\n",
+    "\n",
+    "# \"Fiyatı\" kolonu hariç diğer tüm kolon adlarını al\n",
+    "columns_except_fiyat = [col for col in df.columns if col != 'Price']\n",
+    "\n",
+    "# Bu kolonlara göre tekrar eden satırları kaldır\n",
+    "unique_df = df.drop_duplicates(subset=columns_except_fiyat)\n",
+    "\n",
+    "# Yeni CSV dosyasını kaydet\n",
+    "output_filename = r'C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\withoutDuplicatePrice.csv'\n",
+    "unique_df.to_csv(output_filename, index=False)\n",
+    "\n",
+    "print(f\"Fiyatı hariç tekrarsız veri kaydedildi: {output_filename}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e7c5a6ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Product name - image URL mapping saved to C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\productImages2.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Giriş CSV dosyasını oku\n",
+    "input_filename = r'C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\filterNewAkakce.csv'\n",
+    "df = pd.read_csv(input_filename)\n",
+    "\n",
+    "# Aynı ürün adlarına ait image URL'lerini birleştir (ayırıcı olarak \";\" kullanılıyor)\n",
+    "grouped_df = df.groupby('Product Name')['Image'].apply(lambda x: '; '.join(x.dropna().unique())).reset_index()\n",
+    "\n",
+    "# Yeni DataFrame'i CSV'ye kaydet\n",
+    "output_filename = r'C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\productImages2.csv'\n",
+    "grouped_df.to_csv(output_filename, index=False)\n",
+    "\n",
+    "print(f\"Product name - image URL mapping saved to {output_filename}\")\n"
    ]
   }
  ],
