--- a/AI/utils/notebooks/lstm.ipynb
+++ b/AI/utils/notebooks/lstm.ipynb
@@ -254,25 +254,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Product name - image URL mapping saved to C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\productImages2.csv\n"
+      "126\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Giriş CSV dosyasını oku\n",
-    "input_filename = r'C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\filterNewAkakce.csv'\n",
+    "# CSV dosyasını oku\n",
+    "input_filename = r\"C:\\Users\\pc\\Desktop\\AIbazaar\\AIBazaar\\AI\\utils\\newProduct.csv\"\n",
     "df = pd.read_csv(input_filename)\n",
     "\n",
-    "# Aynı ürün adlarına ait image URL'lerini birleştir (ayırıcı olarak \";\" kullanılıyor)\n",
-    "grouped_df = df.groupby('Product Name')['Image'].apply(lambda x: '; '.join(x.dropna().unique())).reset_index()\n",
-    "\n",
-    "# Yeni DataFrame'i CSV'ye kaydet\n",
-    "output_filename = r'C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\productImages2.csv'\n",
-    "grouped_df.to_csv(output_filename, index=False)\n",
-    "\n",
-    "print(f\"Product name - image URL mapping saved to {output_filename}\")\n"
+    "# Benzersiz ürün isimlerini liste olarak al\n",
+    "df= df.drop_duplicates()\n",
+    "df.to_csv(\"drop_duplicates_product.csv\",index=False)\n",
+    "print(len(df))"
    ]
   }
  ],
@@ -292,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
