--- a/AI/utils/notebooks/lstm.ipynb
+++ b/AI/utils/notebooks/lstm.ipynb
@@ -10,14 +10,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original rows: 32391\n"
+      "Original rows: 123133\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(r\"C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\csv\\yeniakakce.csv\")\n",
+    "df = pd.read_csv(r\"products.csv\")\n",
     "# Keep only rows with Price > 0\n",
     "df = df.drop_duplicates().reset_index(drop=True)\n",
     "\n",
