--- a/AI/utils/notebooks/lstm.ipynb
+++ b/AI/utils/notebooks/lstm.ipynb
@@ -306,6 +306,40 @@
     "\n",
     "df.to_csv(input_filename)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "45327c46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    Samsung Galaxy S24 Ultra\n",
+      "1    Samsung Galaxy S24 Ultra\n",
+      "2    Samsung Galaxy S24 Ultra\n",
+      "3    Samsung Galaxy S24 Ultra\n",
+      "4    Samsung Galaxy S24 Ultra\n",
+      "Name: ProductName, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "# CSV'yi oku\n",
+    "df = pd.read_csv(r\"C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\notebooks\\LSTMPriceHistory.csv\")\n",
+    "\n",
+    "# Özel karakterleri '_' ile değiştir\n",
+    "df[\"ProductName\"] = df[\"ProductName\"].apply(lambda x: re.sub(r'[\\/:*?\"<>|]', ' ', x))\n",
+    "\n",
+    "# Sonuçları kontrol et\n",
+    "print(df[\"ProductName\"].head())\n",
+    "df.to_csv(\"LSTMPriceHistory.csv\",index=False)\n"
+   ]
   }
  ],
  "metadata": {
