--- a/AI/utils/notebooks/lstm.ipynb
+++ b/AI/utils/notebooks/lstm.ipynb
@@ -350,6 +350,36 @@
     "print(df[\"ProductName\"].head())\n",
     "df.to_csv(\"LSTMPriceHistory.csv\",index=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "086da3ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(r\"C:\\Users\\pc\\Desktop\\AIbazaar\\AIBazaar\\AI\\utils\\notebooks\\Product.csv\")\n",
+    "df[\"Model\"] = df[\"Model\"] + \" \"+ df[\"RAM\"].astype(str) +\" GB RAM \" + df[\"Internal Storage\"].astype(str)+\" GB\"\n",
+    "df.to_csv(\"Product2.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45967061",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfe27359",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -368,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
