--- a/AI/utils/notebooks/lstm.ipynb
+++ b/AI/utils/notebooks/lstm.ipynb
@@ -353,16 +353,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "086da3ea",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(r\"C:\\Users\\pc\\Desktop\\AIbazaar\\AIBazaar\\AI\\utils\\notebooks\\Product.csv\")\n",
-    "df[\"Model\"] = df[\"Model\"] + \" \"+ df[\"RAM\"].astype(str) +\" GB RAM \" + df[\"Internal Storage\"].astype(str)+\" GB\"\n",
-    "df.to_csv(\"Product2.csv\", index=False)"
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "# CSV dosyasını oku\n",
+    "df = pd.read_csv(\n",
+    "    r\"C:\\Users\\pc\\Desktop\\AIbazaar\\AIBazaar\\AI\\utils\\notebooks\\newProductData.csv\"\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# Model, RAM ve Hafıza'yı ayıklayan yardımcı fonksiyon\n",
+    "def extract_product_name(description):\n",
+    "    try:\n",
+    "      \n",
+    "        ram = re.search(r\"RAM Kapasitesi:\\s*([\\d]+ GB)\", description)\n",
+    "        storage = re.search(r\"Dahili Hafıza:\\s*([\\d]+ GB)\", description)\n",
+    "\n",
+    "        ram_str = ram.group(1).strip() if ram else \"\"\n",
+    "        storage_str = storage.group(1).strip() if storage else \"\"\n",
+    "\n",
+    "        return f\"{ram_str} RAM {storage_str}\".strip()\n",
+    "    except:\n",
+    "        return \"\"\n",
+    "\n",
+    "\n",
+    "# Yeni kolonu oluştur\n",
+    "df[\"ProductName\"] = df[\"ProductName\"]+\" \"+df[\"Description\"].apply(extract_product_name)\n",
+    "\n",
+    "df.to_csv(\"finalProductData.csv\", index=False)"
    ]
   },
   {
