update views.py and xgboost

--- a/AI/utils/notebooks/xgboost.ipynb
+++ b/AI/utils/notebooks/xgboost.ipynb
@@ -88,48 +88,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fcc72c12",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install statsmodels\n",
-    "import pandas as pd\n",
-    "import statsmodels.api as sm\n",
-    "\n",
-    "# Örnek veri oluşturuyoruz\n",
-    "data = {\n",
-    "    'ram': [4, 6, 8, 4, 6, 8, 6, 4, 8, 6, 4, 6],\n",
-    "    'battery': [3000, 3500, 4000, 2800, 3300, 4200, 3100, 2900, 4100, 3400, 3200, 3600],\n",
-    "    'storage': [64, 128, 256, 64, 128, 256, 128, 64, 256, 128, 64, 128],\n",
-    "    'os': ['Android', 'Android', 'Android', 'iOS', 'iOS', 'iOS', 'Android', 'iOS', 'Android', 'iOS', 'Android', 'Android'],\n",
-    "    'brand': ['Samsung', 'Samsung', 'Samsung', 'Apple', 'Apple', 'Apple', 'Samsung', 'Apple', 'Samsung', 'Apple', 'Samsung', 'Samsung'],\n",
-    "    'fiyat': [12000, 15000, 18000, 25000, 28000, 30000, 16000, 27000, 19000, 29000, 14000, 15500]\n",
-    "}\n",
-    "\n",
-    "df = pd.DataFrame(data)\n",
-    "\n",
-    "# Bağımsız değişkenler\n",
-    "X = df.drop(columns=['fiyat'])\n",
-    "\n",
-    "# Kategorik değişkenleri one-hot encode et (ilk kategoriyi düşerek)\n",
-    "X_encoded = pd.get_dummies(X, drop_first=True)\n",
-    "\n",
-    "# Sabit terim ekle\n",
-    "X_encoded = sm.add_constant(X_encoded)\n",
-    "\n",
-    "# Hedef değişken\n",
-    "y = df['fiyat']\n",
-    "\n",
-    "# Modeli oluştur\n",
-    "model = sm.OLS(y, X_encoded).fit()\n",
-    "\n",
-    "# Sonuçları yazdır\n",
-    "print(model.summary())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "id": "a7475de4",
    "metadata": {},
@@ -205,6 +163,96 @@
     "\n",
     "print(df.head())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0bb158ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                    Average Price  Ratio to Highest\n",
+      "Display Technology                                 \n",
+      "OLED                 64776.804348          8.026052\n",
+      "Dynamic AMOLED       48807.566667          6.047412\n",
+      "AMOLED               23586.300885          2.922418\n",
+      "Super AMOLED         18451.838710          2.286241\n",
+      "PLS                   8877.750000          1.099981\n",
+      "IPS LCD               8070.818182          1.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(r\"C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\notebooks\\Product.csv\")\n",
+    "\n",
+    "mean_prices = df.groupby(\"Display Technology\")[\"Price\"].mean().sort_values(ascending=False)\n",
+    "\n",
+    "price_ratios = mean_prices / mean_prices.min()\n",
+    "\n",
+    "result_df = pd.DataFrame({\n",
+    "    \"Average Price\": mean_prices,\n",
+    "    \"Ratio to Highest\": price_ratios\n",
+    "})\n",
+    "\n",
+    "print(result_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9215f931",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                     Model  Display Size Display Technology  \\\n",
+      "122                Poco X7 8 GB RAM 256 GB          6.67             AMOLED   \n",
+      "125   Redmi Note 13 Pro 5G 8 GB RAM 256 GB          6.67             AMOLED   \n",
+      "130  Samsung Galaxy A36 5G 8 GB RAM 256 GB          6.70       Super AMOLED   \n",
+      "131  Samsung Galaxy A55 5G 8 GB RAM 128 GB          6.60       Super AMOLED   \n",
+      "134  Samsung Galaxy A35 5G 8 GB RAM 256 GB          6.60       Super AMOLED   \n",
+      "\n",
+      "     Pixel Density  Battery Capacity  Camera Resolution  CPU Manufacturing  \\\n",
+      "122          446.0              5110                 50                  4   \n",
+      "125          446.0              5100                200                  4   \n",
+      "130          385.0              5000                 50                  4   \n",
+      "131          390.0              5000                 50                  4   \n",
+      "134          390.0              5000                 50                  5   \n",
+      "\n",
+      "    Operating System  RAM  Internal Storage  Fast Charging  Refresh Rate  5G  \\\n",
+      "122          Android    8               256            1.0         120.0   1   \n",
+      "125          Android    8               256            1.0         120.0   1   \n",
+      "130          Android    8               256            1.0         120.0   1   \n",
+      "131          Android    8               128            1.0         120.0   1   \n",
+      "134          Android    8               256            1.0         120.0   1   \n",
+      "\n",
+      "     Price  price_diff  \n",
+      "122  15821         821  \n",
+      "125  15199         199  \n",
+      "130  15795         795  \n",
+      "131  16199        1199  \n",
+      "134  15180         180  \n",
+      "31\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv(r\"C:\\Users\\EXCALIBUR\\Desktop\\projects\\Okul Ödevler\\AIBazaar\\AI\\utils\\notebooks\\Product.csv\")\n",
+    "prediction_price = 15000\n",
+    "df[\"price_diff\"] = (df[\"Price\"] - prediction_price).abs()\n",
+    "df = df[df[\"price_diff\"] <= prediction_price * 0.1]  \n",
+    "print(df.head(5))\n",
+    "\n",
+    "print(len(df))"
+   ]
   }
  ],
  "metadata": {
@@ -223,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
