product files updated

--- a/AI/utils/notebooks/rf.ipynb
+++ b/AI/utils/notebooks/rf.ipynb
@@ -2,19 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "0d46c314",
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "Giriş dosyası bulunamadı: C:\\Users\\pc\\Desktop\\AIbazaar\\AIBazaar\\AI\\utils\\notebooks\\LSTMProduct1.csv",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 29\u001b[39m\n\u001b[32m     27\u001b[39m \u001b[38;5;66;03m# CSV'yi oku\u001b[39;00m\n\u001b[32m     28\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os.path.exists(input_file):\n\u001b[32m---> \u001b[39m\u001b[32m29\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mGiriş dosyası bulunamadı: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00minput_file\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     31\u001b[39m df = pd.read_csv(input_file)\n\u001b[32m     33\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mDescription\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m df.columns:\n",
-      "\u001b[31mFileNotFoundError\u001b[39m: Giriş dosyası bulunamadı: C:\\Users\\pc\\Desktop\\AIbazaar\\AIBazaar\\AI\\utils\\notebooks\\LSTMProduct1.csv"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✔ Dosya mevcut kolonlar korunarak ve Description bilgileri ayrılarak kaydedildi.\n"
      ]
     }
    ],
@@ -22,11 +18,10 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "# Giriş ve çıkış dosyaları\n",
+    "# Giriş dosyası\n",
     "input_file = (\n",
-    "    r\"C:\\Users\\pc\\Desktop\\AIbazaar\\AIBazaar\\AI\\utils\\notebooks\\LSTMProduct1.csv\"\n",
+    "    r\"C:\\Users\\pc\\Desktop\\AIbazaar\\AIBazaar\\AI\\utils\\notebooks\\product_specs_en1.csv\"\n",
     ")\n",
-    "output_file = \"product_specs_en.csv\"\n",
     "\n",
     "# Türkçe → İngilizce kolon çevirisi\n",
     "column_mapping = {\n",
@@ -54,47 +49,58 @@
     "if \"Description\" not in df.columns:\n",
     "    raise KeyError(\"CSV dosyasında 'Description' sütunu bulunamadı.\")\n",
     "\n",
-    "# Her satır için özellikleri ayır\n",
-    "expanded_rows = []\n",
+    "# Description kolonunu parse et ve yeni sütunları oluştur\n",
+    "parsed_data = []\n",
     "for _, row in df.iterrows():\n",
+    "    description = str(row.get(\"Description\", \"\"))\n",
     "    specs = {}\n",
-    "    description = row.get(\"Description\", \"\")\n",
-    "    for part in str(description).split(\";\"):\n",
+    "\n",
+    "    for part in description.split(\";\"):\n",
     "        if \":\" in part:\n",
     "            key, value = part.split(\":\", 1)\n",
     "            key = key.strip()\n",
     "            value = value.strip()\n",
-    "\n",
-    "            # İngilizceye çevir\n",
     "            english_key = column_mapping.get(key, key)\n",
     "            specs[english_key] = value\n",
-    "        else:\n",
-    "                specs[english_key] = value\n",
-    "    expanded_rows.append(specs)\n",
     "\n",
-    "# Yeni DataFrame oluştur\n",
-    "expanded_df = pd.DataFrame(expanded_rows)\n",
+    "    parsed_data.append(specs)\n",
+    "\n",
+    "# Yeni kolonlar olarak ekle\n",
+    "parsed_df = pd.DataFrame(parsed_data)\n",
+    "\n",
+    "# Orijinal DataFrame'e join et (index üzerinden hizalanır)\n",
+    "df_updated = pd.concat([df, parsed_df], axis=1)\n",
     "\n",
     "# Kaydet\n",
-    "expanded_df.to_csv(output_file, index=False, encoding=\"utf-8-sig\")\n",
-    "print(f\"✔ {output_file} dosyası İngilizce kolonlarla başarıyla oluşturuldu.\")"
+    "df_updated.to_csv(\"hello.csv\", index=False, encoding=\"utf-8-sig\")\n",
+    "print(\n",
+    "    \"✔ Dosya mevcut kolonlar korunarak ve Description bilgileri ayrılarak kaydedildi.\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "3617b8e2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "productDetail_updated.csv dosyası başarıyla güncellendi.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import re\n",
     "\n",
     "# Dosya yolları\n",
     "input_file = (\n",
-    "    r\"C:\\Users\\pc\\Desktop\\AIbazaar\\AIBazaar\\AI\\utils\\notebooks\\product_specs_en.csv\"\n",
+    "    r\"C:\\Users\\pc\\Desktop\\AIbazaar\\AIBazaar\\AI\\utils\\notebooks\\productDetail.csv\"\n",
     ")\n",
-    "output_file = \"product_specs_en.csv\"\n",
+    "output_file = \"productDetail_updated.csv\"\n",
     "\n",
     "# Dosyayı oku\n",
     "df = pd.read_csv(input_file)\n",
@@ -217,18 +223,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "79ef47c5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ CSV2'deki ProductID'ler, Model eşleşmesine göre CSV1'den güncellendi.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -255,15 +253,7 @@
    "execution_count": null,
    "id": "c0d0f200",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ CSV2'deki Model isimleri, ProductID'ye göre CSV1'den güncellendi.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -283,6 +273,46 @@
     "\n",
     "print(\"✅ CSV2'deki Model isimleri, ProductID'ye göre CSV1'den güncellendi.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "88dac132",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✔ iOS telefonlar başarıyla ios_only.csv dosyasına eklendi.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# 1. Tüm telefonları içeren dosyayı oku\n",
+    "all_df = pd.read_csv(\n",
+    "    r\"C:\\Users\\pc\\Desktop\\AIbazaar\\AIBazaar\\AI\\utils\\notebooks\\product_specs_en.csv\"\n",
+    ")\n",
+    "\n",
+    "# 2. Sadece iOS olanları filtrele\n",
+    "ios_df = all_df[all_df[\"Operating System\"] == \"iOS\"]\n",
+    "\n",
+    "# 3. Hedef dosya varsa oku, yoksa boş bir DataFrame oluştur\n",
+    "try:\n",
+    "    target_df = pd.read_csv(r\"C:\\Users\\pc\\Desktop\\AIbazaar\\AIBazaar\\AI\\utils\\notebooks\\Product.csv\")\n",
+    "except FileNotFoundError:\n",
+    "    target_df = pd.DataFrame(columns=all_df.columns)\n",
+    "\n",
+    "# 4. Yeni iOS verilerini hedef dosyaya ekle (varsa tekrar edenleri engellemek için concat + drop_duplicates)\n",
+    "merged_df = pd.concat([target_df, ios_df], ignore_index=True).drop_duplicates()\n",
+    "merged_df.drop_duplicates()\n",
+    "# 5. Güncellenmiş ios_only.csv dosyasını kaydet\n",
+    "merged_df.to_csv(\"Product.csv\", index=False, encoding=\"utf-8-sig\")\n",
+    "\n",
+    "print(\"✔ iOS telefonlar başarıyla ios_only.csv dosyasına eklendi.\")"
+   ]
   }
  ],
  "metadata": {
@@ -301,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
